--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,7 @@
 {
+    "name": "__MSG_manifestExtName__",
+    "version": "1.21",
     "manifest_version": 2,
-    "name": "Furiganalize",
-    "version": "1.0",
-    "applications": {
-        "gecko": {
-            "id": "github_com_kuanyui_furiganalize"
-        }
-    },
     "background": {
 	"scripts": ["lib/jquery-2.0.2.js", "lib/sprintf.min.js", "lib/igo.min.js", "lib/zip.min.js", "lib/wanakana.min.js", "background.js", "lib/diff.js"],
 	"persistent": false
@@ -16,7 +11,7 @@
 	"matches": ["http://*/*", "https://*/*", "file://*/*"]
     } ],
     "default_locale": "en",
-    "description": "Insert Furigana of Kanji into page.",
+    "description": "__MSG_manifestExtDescription__",
     "icons": { "16": "img/furigana_active.png",
 	       "32": "img/furigana_active.png",
 	       "48": "img/furigana_active_48.png",
