--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,39 @@
 {
-    "name": "__MSG_manifestExtName__",
-    "version": "1.21",
-    "manifest_version": 2,
-    "background": {
-	"scripts": ["lib/jquery-2.0.2.js", "lib/sprintf.min.js", "lib/igo.min.js", "lib/zip.min.js", "lib/wanakana.min.js", "background.js", "lib/diff.js"]
-    },
-    "content_scripts": [ {
-	"js": ["kanji_content_detect.js"],
-	"matches": ["http://*/*", "https://*/*", "file://*/*"]
-    } ],
-    "default_locale": "en",
-    "description": "__MSG_manifestExtDescription__",
-    "icons": { "16": "img/furigana_active.png",
-	       "32": "img/furigana_active.png",
-	       "48": "img/furigana_active_48.png",
-	       "96": "img/furigana_active_96.png",
-	       "128": "img/furigana_active.png",
-	       "256": "img/furigana_active.png" },
-    "options_ui": {
-        "page": "user_cp/options.html",
-        "browser_style": true
-    },
-    "browser_action": {
-	"default_icon": {"38": "img/icons/furigana_inactive_76.png"},
-	"default_title": "Toggle furigana"
-    },
-    "permissions": ["http://*/*", "https://*/*", "file://*/*", "activeTab", "tabs"],
-    "commands": {
-	"toggle-furigana": {
-	    "suggested_key": {
-		"default": "Alt+Shift+F",
-		"mac": "Alt+Shift+F"
-	    },
-	    "description": "Toggle furigana"
+	"name": "__MSG_manifestExtName__",
+	"version": "1.21",
+	"manifest_version": 2,
+	"background": {
+		"scripts": ["lib/jquery-2.0.2.js", "lib/sprintf.min.js", "lib/igo.min.js", "lib/zip.min.js", "lib/wanakana.min.js", "lib/diff.js","background.js"]
+	},
+	"content_scripts": [ {
+		"js": ["kanji_content_detect.js"],
+		"matches": ["http://*/*", "https://*/*", "file://*/*"],
+		"all_frames": true
+	} ],
+	"default_locale": "en",
+	"description": "__MSG_manifestExtDescription__",
+	"icons": { "16": "img/furigana_active.png",
+		   "32": "img/furigana_active.png",
+		   "48": "img/furigana_active_48.png",
+		   "96": "img/furigana_active_96.png",
+		   "128": "img/furigana_active.png",
+		   "256": "img/furigana_active.png" },
+	"options_ui": {
+		"page": "user_cp/options.html",
+		"browser_style": true
+	},
+	"browser_action": {
+		"default_icon": {"38": "img/icons/furigana_inactive_76.png"},
+		"default_title": "Toggle furigana"
+	},
+	"permissions": ["http://*/*", "https://*/*", "file://*/*", "<all_urls>", "activeTab", "tabs", "storage"],
+	"commands": {
+		"toggle-furigana": {
+			"suggested_key": {
+				"default": "Alt+Shift+F",
+				"mac": "Alt+Shift+F"
+			},
+			"description": "Toggle furigana"
+		}
 	}
-    }
 }
