--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,16 @@
 	},
 	"browser_action": {
 		"default_title": "Toggle furigana",
-		"default_icon": {"38": "img/icons/furigana_inactive_76.png"}
+		"default_icon": {
+            "48": "img/icon_mobile.svg"  // For Android only, because Android doens't support `theme_icons`
+		},
+        "theme_icons": [
+            {
+                "light": "img/icon_light.svg",
+                "dark":  "img/icon_dark.svg",
+                "size": 32
+            }
+        ]
 	},
 	"commands": {
         "toggle-furigana": {
