--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 		"scripts": ["lib/jquery-3.3.1.min.js", "lib/igo.js", "lib/zipjs/jsinflate.js", "lib/zipjs/sjis.js", "lib/zipjs/zip.js", "lib/wanakana.js", "lib/diff.js", "background.js"]
 	},
 	"content_scripts": [ {
-		"js": ["kanji_content_detect.js"],
+		"js": ["page_set_bg_icon.js", "kanji_content_detect.js"],
 		"matches": ["http://*/*", "https://*/*", "file://*/*"],
 		"all_frames": true
 	} ],
